setup configuration for nodemailer (not done)
